# opencv-mjpg

./: CMakeLists.txt  TcpServer.cpp  TcpServer.h  main.cpp
